--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,28 @@
   </head>
 
   <body>
+
+    <% if current_user.nil? %>
+      <%= form_for(:session, url: login_path) do |f| %>
+        <%= f.label :email %>
+        <%= f.email_field :email %>
+        <%= f.submit "Log in" %>
+      <% end %>
+    <% else %>
+      Logged in as: <%= link_to current_user.name, user_path(current_user) %>
+      | <%= link_to "Logout", logout_path, method: :delete %>
+    <% end %>
     <ul>
       <li><%= link_to new_user_path, new_user_path %></li>
       <li><%= link_to users_path, users_path %></li>
     </ul>
     <div class="container">
+     <% flash.each do |type, message| %>
+        <%= content_tag(:div, message, class: "alert alert-#{type}") %>
+      <% end %>
       <%= yield %>
     </div>
+
+    <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
