--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,16 @@
 <h1><%= @user.name %></h1>
 
 Email: <%= @user.email %>
+
+<h2>Events</h2>
+<%= link_to "Create a new event", new_event_path %>
+<br><br>
+<% if @events.any? %>
+<ul>
+  <% @events.each do |event| %>
+    <li><%= link_to event.name, event_path(event) %></li>
+  <% end %>
+</ul>
+<% else %>
+No events found
+<% end %>
