--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,6 @@
 <h1><%= @event.name %></h1>
-<h2>created by: <%= @event.creator.name %></h2>
+<small>created by: <%= @event.creator.name %></small> <br>
+Where: <%= @event.location %> <br>
+When : <%= @event.happens_at %> <br><br>
 <%= @event.description %>
 
