--- a/app/views/shared/_login_form.html.erb
+++ b/app/views/shared/_login_form.html.erb
@@ -3,7 +3,8 @@
   <div class="form-group">
     <%= f.label :email, class: "sr-only" %>
     <%= f.email_field :email, placeholder: "e-mail address",
-                      class: "form-control" %>
+                      class: 'form-control input-sm' %>
   </div>
-  <%= f.submit "Log in", class: "btn btn-default", class: "form-control" %>
+  <%= f.submit "Log in", class: 'form-control btn btn-primary btn-sm btn-login' %>
+
 <% end %>
