--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,18 +1,20 @@
 <h1>Create a new event</h1>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for @event do |f| %>
+      <%= f.label :name %>
+      <%= f.text_field :name, class: 'form-control' %>
 
-<%= form_for @event do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <br>
-  <%= f.label :description %>
-  <%= f.text_area :description, height: 10 %>
-  <br>
-  <%= f.label :location %>
-  <%= f.text_field :location %>
-  <br>
-  <%= f.label :happens_at %>
-  <%= f.datetime_field :happens_at %>
-  <br>  <br>
-  <%= f.submit "Create event" %>
-  Will be created by: <%= current_user.name %>
-<% end %>
+      <%= f.label :description %>
+      <%= f.text_area :description, rows: 8, class: 'form-control' %>
+
+      <%= f.label :location %>
+      <%= f.text_field :location, class: 'form-control' %>
+
+      <%= f.label :happens_at %>
+      <%= f.datetime_field :happens_at, class: 'form-control' %>
+
+      <%= f.submit "Create event", class: 'btn btn-primary' %>
+    <% end %>
+  </div>
+</div>
