--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,88 @@
-<h1><%= @user.name %></h1>
+<h1><%= @user.name %> <small><%= @user.email %></small></h1>
 
-<h3>Events</h3>
-<% if @events.any? %>
-<ul>
-  <% @events.each do |event| %>
-    <li><%= link_to event.name, event_path(event) %></li>
+<h3>Created Events</h3>
+
+<% if @created_events.any? %>
+<table class="table table-condensed">
+  <thead>
+    <td class="col-sm-3">Date/Time</td>
+    <td class="col-sm-3">Title</td>
+    <td class="col-sm-3">Location</td>
+    <td class="col-sm-2">Created by</td>
+    <td class="col-sm-1">Attendees</td>
+  </thead>
+  <tbody>
+  <% @created_events.each do |event| %>
+    <tr>
+      <td><%= format_date(event.happens_at) %></td>
+      <td><%= link_to event.name, event_path(event) %></td>
+      <td><%= event.location %></td>
+      <td><%= link_to event.creator.name, user_path(event.creator) %></td>
+      <td><%= event.attendees_count %></td>
+    </tr>
   <% end %>
-</ul>
+  </tbody>
+</table>
 <% else %>
-No events found
+No events found.
+<% end %>
+<% if @user == current_user %>
+  <div class="row">
+    <span class="pull-right">
+      <%= button_to "Create a new event", new_event_path,
+          { class: "btn btn-success btn-sm", method: :get } %>
+    </span>
+  </div>
+<% end %>
+
+<h3>Upcoming Events</h3>
+<% if @future_events.any? %>
+<table class="table table-condensed">
+  <thead>
+    <td class="col-sm-3">Date/Time</td>
+    <td class="col-sm-3">Title</td>
+    <td class="col-sm-3">Location</td>
+    <td class="col-sm-2">Created by</td>
+    <td class="col-sm-1">Attendees</td>
+  </thead>
+  <tbody>
+  <% @future_events.each do |event| %>
+    <tr>
+      <td><%= format_date(event.happens_at) %></td>
+      <td><%= link_to event.name, event_path(event) %></td>
+      <td><%= event.location %></td>
+      <td><%= link_to event.creator.name, user_path(event.creator) %></td>
+      <td><%= event.attendees_count %></td>
+    </tr>
+  <% end %>
+  </tbody>
+</table>
+<% else %>
+No events found.
+<% end %>
+
+<h3>Past events</h3>
+<% if @past_events.any? %>
+<table class="table table-condensed">
+  <thead>
+    <td class="col-sm-3">Date/Time</td>
+    <td class="col-sm-3">Title</td>
+    <td class="col-sm-3">Location</td>
+    <td class="col-sm-2">Created by</td>
+    <td class="col-sm-1">Attendees</td>
+  </thead>
+  <tbody>
+  <% @past_events.each do |event| %>
+    <tr>
+      <td><%= format_date(event.happens_at) %></td>
+      <td><%= link_to event.name, event_path(event) %></td>
+      <td><%= event.location %></td>
+      <td><%= link_to event.creator.name, user_path(event.creator) %></td>
+      <td><%= event.attendees_count %></td>
+    </tr>
+  <% end %>
+  </tbody>
+</table>
+<% else %>
+No events found.
 <% end %>
